test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_and_op.draco
proc main() void : a := a and b; corp;

