test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_text_as_identifier.draco
int text;
 
proc main() void : a := 1; corp;
